<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/check_update_bg"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="250dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dip"
        android:src="@drawable/company_icon" />

    <ImageView
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/version_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/last_version"
            android:textSize="18dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/swh_auto_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/auto_check"
            android:textSize="16dp" />

        <CheckBox
            android:id="@+id/swh_check_full_upgrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/check_fullupgrade"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dip"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btn_check_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/check_update_btn"
            android:gravity="center"
            android:text="@string/check_now"
            android:textSize="24dp" />
    </LinearLayout>

</LinearLayout>