<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/foreign_checkupdate_bg"
    android:orientation="vertical" >

    <ImageView
        android:id="@id/imageView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="43.0dip"
        android:scaleType="fitXY"
        android:src="@drawable/foreign_checkupdate_line_top" />

    <TextView
        android:id="@id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40.0dip"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/foreign_checkupdate_top_bg"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textSize="26.0sp" />

    <TextView
        android:id="@id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="100.0dip"
        android:layout_marginTop="200.0dip"
        android:layout_toRightOf="@id/imageView1"
        android:text="@string/checked"
        android:textSize="20.0sp" />

    <TextView
        android:id="@+id/update_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView2"
        android:layout_below="@id/textView2"
        android:layout_marginTop="10.0dip"
        android:textSize="30.0sp" />

    <TextView
        android:id="@id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/update_version"
        android:layout_below="@id/update_version"
        android:layout_marginTop="82.0dip"
        android:text="@string/update_log"
        android:textSize="20.0sp" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="120.0dip"
        android:layout_height="70.0dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="100.0dip"
        android:layout_marginRight="100.0dip"
        android:src="@drawable/foreign_checkupdate_check_icon"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/update_btn"
        android:layout_width="120.0dip"
        android:layout_height="70.0dip"
        android:layout_above="@id/cancel_btn"
        android:layout_alignLeft="@id/cancel_btn"
        android:layout_marginBottom="10dip"
        android:src="@drawable/foreign_checkupdate_check_icon"
        android:text="@string/update" />

    <TextView
        android:id="@id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/update_btn"
        android:layout_marginRight="10.0dip"
        android:layout_toLeftOf="@id/update_btn"
        android:text="@string/check_now"
        android:textSize="20.0sp"
        android:visibility="gone" />

    <ImageView
        android:id="@id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/linearLayout1"
        android:layout_centerVertical="true"
        android:layout_marginLeft="92.0dip"
        android:src="@drawable/foreign_checkupdate_icon" />

    <ImageView
        android:id="@id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/imageView1"
        android:layout_centerVertical="true"
        android:minHeight="400.0dip"
        android:scaleType="fitXY"
        android:src="@drawable/foreign_checkupdate_line" />

    <RelativeLayout
        android:id="@+id/description_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_marginBottom="100.0dip"
        android:layout_marginLeft="40.0dip"
        android:layout_marginRight="40.0dip"
        android:layout_marginTop="10.0dip"
        android:layout_toRightOf="@id/imageView1"
        android:layout_alignParentRight="true"
        android:background="@drawable/foreign_update_content_selector" >

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:singleLine="false"
            android:textSize="20.0sp" />
    </RelativeLayout>

</RelativeLayout>