<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/foreign_checkupdate_bg"
    android:orientation="vertical" >

    <ImageView
        android:id="@id/imageView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="43.0dip"
        android:scaleType="fitXY"
        android:src="@drawable/foreign_checkupdate_line_top" />

    <TextView
        android:id="@id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40.0dip"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/foreign_checkupdate_top_bg"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textSize="26.0sp" />

    <TextView
        android:id="@id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="100.0dip"
        android:layout_marginTop="200.0dip"
        android:layout_toRightOf="@id/imageView1"
        android:text="@string/current_version"
        android:textSize="20.0sp" />

    <TextView
        android:id="@id/txt_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView2"
        android:layout_below="@id/textView2"
        android:layout_marginTop="10.0dip"
        android:textSize="30.0sp" />

    <TextView
        android:id="@id/txt_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView5"
        android:layout_below="@id/textView5"
        android:layout_marginTop="10.0dip"
        android:textSize="30.0sp" />

    <TextView
        android:id="@id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txt_version"
        android:layout_below="@id/txt_version"
        android:layout_marginTop="82.0dip"
        android:text="@string/product_model"
        android:textSize="20.0sp" />

    <ImageButton
        android:id="@id/btn_check_now"
        android:layout_width="120.0dip"
        android:layout_height="70.0dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="100.0dip"
        android:layout_marginRight="140.0dip"
        android:src="@drawable/foreign_checkupdate_check_icon" />

    <TextView
        android:id="@id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/btn_check_now"
        android:layout_marginRight="10.0dip"
        android:layout_toLeftOf="@id/btn_check_now"
        android:text="@string/check_now"
        android:textSize="20.0sp" />

    <ImageView
        android:id="@id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/linearLayout1"
        android:layout_centerVertical="true"
        android:layout_marginLeft="92.0dip"
        android:src="@drawable/foreign_checkupdate_icon" />

    <ImageView
        android:id="@id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/imageView1"
        android:layout_centerVertical="true"
        android:minHeight="400.0dip"
        android:scaleType="fitXY"
        android:src="@drawable/foreign_checkupdate_line" />

</RelativeLayout>